# Petcare_AI

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
DESIGN/: DESIGN.md  code (2).html  code (4).html  code (5).html  code.html
data/: README.md
data/evaluation/: t12_seed.jsonl
data/samples/pet_owner_care/: 01_health_triage.md  02_toxic_and_emergency.md  03_nutrition_weight.md  04_behavior_training.md  05_life_prevention.md  06_home_hygiene_zoonosis.md  07_emergency_travel_preparedness.md  08_cat_urinary_litterbox.md  README.md  (+9 more)
docs/: AGENTS.md  ARCHITECTURE.md  DATA_GOVERNANCE.md  EVALUATION.md  T12_MVP.md  TEAM_ROLES.md  TOPIC_CANDIDATES.md  TOPIC_SELECTION.md
docs/decisions/: 0001-platform-baseline.md  0002-openai-test-provider.md
frontend/: .env.example  AGENTS.md  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  data.ts  styles.css  supabase.ts  types.ts
infra/: Dockerfile
scripts/: evaluate_retrieval.py  openai_smoke_test.py  run_app.ps1  run_frontend.ps1  run_fullstack.ps1  smoke_test.ps1
src/docqa/: AGENTS.md  __init__.py
tests/: AGENTS.md  test_api.py  test_config.py  test_contracts.py  test_local_search.py  test_openai_responses.py  test_retrieval_evaluation.py  test_t12_source_catalog.py  test_user_data_api.py
ui/: AGENTS.md  app.py
(+34 files in other folders)
